# nand2tetris

./: .gitignore
01/: DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way.hdl  Mux4Way16.hdl  Mux8Way.hdl
02/: ALU.hdl  FullAdder.hdl  IsNeg.hdl  ZeroIf.hdl  ZeroOrNegate.hdl  Zn16.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm  Fill.hack
04/mult/: mult.asm  mult.hack
05/: CPU.hdl  Computer.hdl  Memory.hdl
toolchain/: .gitignore  LICENSE  stack.yaml  test-asm.sh  test-vm.sh  toolchain.cabal  translate-vm.sh
toolchain/app/: Assembler.hs  VMTranslator.hs
toolchain/src/: AST.hs  AsmAST.hs  AsmBackend.hs  AsmParser.hs  HackBackend.hs  JackAST.hs  JackParser.hs  Lib.hs  LineLexing.hs  VMAST.hs  VMParser.hs
toolchain/test/: JackParserSpec.hs  Spec.hs
