name:                toolchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/toolchain#readme
license:             GPL-3
license-file:        COPYING
author:              Hannu Hartikainen
maintainer:          example@example.com
copyright:           2017-2019 Hannu Hartikainen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       AsmParser
                     , AsmAST
                     , HackBackend
                     , LineLexing
                     , VMParser
                     , VMAST
                     , AsmBackend
                     , JackParser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , transformers
  default-language:    Haskell2010

executable assembler
  hs-source-dirs:      app
  main-is:             Assembler.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toolchain
                     , megaparsec
  default-language:    Haskell2010

executable vm-translator
  hs-source-dirs:      app
  main-is:             VMTranslator.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , toolchain
                     , megaparsec
                     , directory
  default-language:    Haskell2010

test-suite toolchain-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , toolchain
                     , megaparsec
                     , hspec
                     , hspec-megaparsec
  other-modules:       JackParser
                     , JackParserSpec
                     , LineLexing
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/toolchain
